--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "bundle"         : "dolphin",
     "version"        : "0.0.1",
     "devDependencies": {
-        "grunt"                   : ">=0.4.0",
-        "grunt-contrib"           : ">=0.4.0",
-        "grunt-contrib-requirejs" : ">=0.2.0",
-        "grunt-contrib-jshint"    : ">=0.1.0",
+        "grunt"                   : "~0.4.1",
+        "grunt-contrib"           : "~0.8.0",
+        "grunt-contrib-requirejs" : "~0.2.0",
+        "grunt-contrib-jshint"    : "~0.6.4",
         "grunt-contrib-clean"     : "~0.4.0",
-        "buster"                  : ">=0.6.12",
-        "buster-amd"              : ">=0.2.0",
+        "buster"                  : "~0.6.12",
+        "buster-amd"              : "0.2.0",
         "grunt-buster"            : "~0.1.2"
     },
     "dependencies": {
